--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --main-font: 'Poppins', sans-serif;
+}
+
+body {
+  font-family: var(--main-font);
+}
+
+.poppins {
+    font-family: var(--font-poppins);
+  }
